--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -15,6 +15,7 @@
       <label for="weather">Location:</label><br><br>
       <input type="text" placeholder="Location" id="loc"/>
       <button type="submit">Search</button>
+      <p class="load" style="display: none">Loading...</p>
     </form>
     <p></p>
     <p></p>
