--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -15,8 +15,8 @@
       <label for="weather">Location:</label><br><br>
       <input type="text" placeholder="Location" id="loc"/>
       <button type="submit">Search</button>
-      <p class="load" style="display: none">Loading...</p>
     </form>
+    <h5 class="load" style="display: none">Loading...</h5>
     <p></p>
     <p></p>
   </div>
