--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -10,8 +10,10 @@
   <body>
     <div class="main-content">
     {{>header}}
+    <br><br>
+    <p>This site was created by Arunesh Dhar.It uses data from mapbox.com and weatherstack.com</p>
     <div class="portrait">
-    <img src="/img/CEafsh.jpg" alt="node">
+    <img src="/img/bg.jpg" alt="node">
     </div>
   </div>
     {{>footer}}
